did some clean up stuff!

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,5 @@
 <!-- Page Header -->
-<div class="bg-blue-900 text-white">
+<div class="bg-blue-900 text-white" style="background-color: #ec5415;">
   <div class="max-w-7xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:px-8">
     <h1 class="text-4xl font-extrabold tracking-tight sm:text-5xl lg:text-6xl">Contact Us</h1>
     <p class="mt-6 text-xl max-w-3xl">We'd love to hear from you. Get in touch with us using the form below.</p>
@@ -35,7 +35,7 @@
           </div>
 
           <div>
-            <button type="submit" class="w-full bg-blue-600 text-white px-6 py-3 rounded-md font-medium hover:bg-blue-700">
+            <button type="submit" class="w-full bg-blue-600 text-white px-6 py-3 rounded-md font-medium hover:bg-blue-700" style="background-color: #ec5415;">
               Send Message
             </button>
           </div>
@@ -88,7 +88,7 @@
               </svg>
             </div>
             <div class="ml-3 text-gray-600">
-              <p>(555) 123-4567</p>
+              <p>(209)-922-4919</p>
             </div>
           </div>
 
@@ -99,7 +99,7 @@
               </svg>
             </div>
             <div class="ml-3 text-gray-600">
-              <p>info@church.com</p>
+              <p>jicc.church@yahoo.com</p>
             </div>
           </div>
         </div>
