--- a/app/views/pages/giving.html.erb
+++ b/app/views/pages/giving.html.erb
@@ -1,5 +1,5 @@
 <!-- Page Header -->
-<div class="bg-blue-900 text-white">
+<div class="bg-blue-900 text-white" style="background-color: #ec5415;">
   <div class="max-w-7xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:px-8">
     <h1 class="text-4xl font-extrabold tracking-tight sm:text-5xl lg:text-6xl">Give</h1>
     <p class="mt-6 text-xl max-w-3xl">Support our ministry and make a difference in our community.</p>
