--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -32,3 +32,10 @@
     @apply border-jicc-red;
   }
 }
+
+@layer utilities {
+  .hide-navbar {
+    transform: translateY(-100%);
+    transition: transform 0.3s ease;
+  }
+}
