--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,5 +1,5 @@
-<nav class="bg-transparent py-4 ">
-  <div class="px-4">
+<nav id="main-navbar" data-controller="navbar" class="bg-transparent py-4" style="position: fixed; top: 0; left: 0; right: 0; width: 100vw; z-index: 50;">
+  <div class="px-8">
     <div class="flex justify-between h-20">
 
     <!-- Logo -->
