some clean up. fixed some tailwind issues!

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
-<div style="position: absolute; top: 0; left: 0; width: 100vw; height: 600px; z-index: 0; overflow: hidden; pointer-events: none;">
-  <%= image_tag "cross.jpg", style: "width: 100vw; height: 0px; object-fit: cover; opacity: .4;" %>
+<div style="position: absolute; top: 0; left: 0; width: 100vw; height: 650px; z-index: 0; overflow: hidden; pointer-events: none;">
+  <%= image_tag "cross.jpg", style: "width: 100vw; height: 800x; object-fit: cover; opacity: .4;" %>
 </div>
 
-<div style="height: 5rem;"></div>
+<div style="height: 8rem;"></div>
 
 <!-- Hero Section -->
 <section class="relative z-10">
@@ -13,6 +13,8 @@
     </div>
   </div>
 </section>
+
+<div style="height: 3rem;"></div>
 
 <!-- Service Times -->
 <section class="py-16">
@@ -44,7 +46,7 @@
 </section>
 
 <!-- Testimonies Section -->
-<section class="py-24 ">
+<section class="py-16 ">
     <div class="mx-auto px-6 sm:px-8 lg:px-12" style="max-width: 75rem;">
     <div class="text-center">
       <span class="inline-block mb-4 px-4 py-1 text-2xl font-semibold tracking-widest text-blue-500 bg-blue-100 rounded uppercase" style="letter-spacing: 0.15em;">Testimony</span>
