--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,12 +1,12 @@
 <!-- Page Header -->
-<div class="text-white relative overflow-visible" style="background-color: #ec5415; height: 600px;">
+<div class="text-white relative overflow-visible bg-gradient-to-l from-orange-600 to-orange-400" style="height: 500px;">
   <div class="flex flex-row items-center max-w-7xl mx-auto h-full px-4 sm:px-6 lg:px-8">
     <div class="w-full lg:w-1/2 flex justify-center relative" style="z-index:2;">
-      <img src="<%= asset_path('bible.jpg') %>" alt="Bible" class="h-auto shadow-lg object-contain" style="max-width: 400px; position: absolute; top: -160px; left: 40%; transform: translateX(-50%);" />
+      <img src="<%= asset_path('about.jpg') %>" alt="Bible" class="h-auto shadow-lg object-contain" style="max-width: 750px; position: absolute; top: -70px; left: 40%; transform: translateX(-50%);" />
     </div>
-    <div class="mt-10 w-full lg:w-1/2 flex flex-col justify-center items-start z-10">
-      <h1 class="font-bold tracking-tight text-xl">ABOUT US</h1>
-      <p class="mt-2 text-4xl max-w-3xl font-semibold">"And I will give you shepherds after my own heart, who will feed you with knowledge and understanding"</p>
+    <div class="mt-32 w-full lg:w-2/4 flex flex-col justify-center items-start z-10 ml-32">
+      <h1 class="font-bold tracking-tight text-lg">ABOUT US</h1>
+      <p class="mt-2 text-3xl max-w-3xl font-semibold">"And I will give you shepherds after my own heart, who will feed you with knowledge and understanding"</p>
       <div class="w-full flex justify-end">
         <p class="mt-4 text-4xl font-semibold self-end">- Jeremiah 3:15</p>
       </div>
