--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -7,19 +7,19 @@
       <%= link_to root_path do %>
         <%= image_tag "jicc_logo.png", class: "w-auto mr-0 mt-12", style: "height: 130px;", alt: "JICC Logo" %>
       <% end %>
-      <%= link_to root_path, class: "text-2xl font-bold text-black" do %>
+      <%= link_to root_path, class: "text-2xl font-bold", style: "color: #3E2C23;" do %>
         JOY INTERNATIONAL CHURCH CENTER
       <% end %>
     </div>
 
       <!-- Desktop menu -->
       <div class="hidden md:flex items-center space-x-4 -mr-4">
-        <%= link_to "About", about_path, class: "uppercase font-bold text-black hover:text-gray-900 px-3 py-2 rounded-md text-lg" %>
-        <%= link_to "Ministries", ministries_path, class: "uppercase font-bold text-black hover:text-gray-900 px-3 py-2 rounded-md text-lg" %>
-        <%= link_to "Events", events_path, class: "uppercase font-bold text-black0 hover:text-gray-900 px-3 py-2 rounded-md text-lg" %>
-        <%= link_to "Sermons", sermons_path, class: "uppercase font-bold text-black hover:text-gray-900 px-3 py-2 rounded-md text-lg" %>
-        <%= link_to "Contact", contact_path, class: "uppercase font-bold text-black hover:text-gray-900 px-3 py-2 rounded-md text-lg" %>
-        <%= link_to "Give", giving_path, class: "uppercase font-bold text-black px-4 py-2 rounded-md text-lg hover:bg-orange-700", style: "background-color: red;" %> 
+        <%= link_to "About", about_path, class: "uppercase font-bold px-3 py-2 rounded-md text-lg hover:text-white", style: "color: #3E2C23;" %>
+        <%= link_to "Ministries", ministries_path, class: "uppercase font-bold px-3 py-2 rounded-md text-lg hover:text-white", style: "color: #3E2C23;" %>
+        <%= link_to "Events", events_path, class: "uppercase font-bold px-3 py-2 rounded-md text-lg hover:text-white", style: "color: #3E2C23;" %>
+        <%= link_to "Sermons", sermons_path, class: "uppercase font-bold px-3 py-2 rounded-md text-lg hover:text-white", style: "color: #3E2C23;" %>
+        <%= link_to "Contact", contact_path, class: "uppercase font-bold px-3 py-2 rounded-md text-lg hover:text-white", style: "color: #3E2C23;" %>
+        <%= link_to "Give", giving_path, class: "uppercase font-bold px-4 py-2 rounded-md text-lg hover:bg-orange-700 hover:text-white bg-red-500"%> 
       </div>
 
       <!-- Mobile menu button -->
